Exponent Content Management System
Copyright (c) 2004-2012 OIC Group, Inc.
===============================================

Added / Fixed / changed for 2.0.9
-----------------------
# This release focuses on greater HTML5 compliance, ,, additional embedded help/documentation links, & module upgrades
  - upgrades old school simple poll and navigation modules into 2.0 style controllers
    -- page type indicators now displayed in Manage Pages view
  - adds help links to most admin displays
  - calendar is more forgiving of timezone changes (events won't disappear)
    -- adds selectable weekly view to calendar
  - adds new 2-column style display option in forms module
  - updates rss feeds to use sef urls, adds individual feed 'advertise' option
  - more efficient searches...bugs fixed and new reports available
  - import EQL database backup files now more descriptive if errors are encountered (detailed solution provided)
  - adds some new upgrade scripts to attempt to clean up the system from previous updates
    -- deletes moved file where old file in old location may still linger
    -- fixes some database issues such as mixed case naming or controller name quirks.
  - plus many other tweaks, fixes, and features

Added / Fixed / changed for 2.0.8
-----------------------
# This release focuses on fixing bugs and enhancing list management (tags, categories, comments)
  - adds manual sorting to news module
  - adds random sorting to links module
  - enhances category management by removing global categories and grouping categories by module type
  - adds site-wide comment management to exponent menu
  - enhances comment, tag, & category management with bulk module item processing
  - adds additional views to photoalbum
    -- new tabbed and accordion views just like filedownloads & portfolio
    -- view category/gallery/group album to pull up individual group/gallery
  - adds group (category) viewing to filedownloads